Added some things, fixed a lot

--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<!-- Angaben für Suchmaschinen -->
 		<!-- Beschreibung -->
-		<meta name="description" content="Eine Seite um zukünftige Treffen zu organisieren.">
+		<meta name="description" content="Eine Seite um Punkte auf einer Karte zu markieren und diese mit Überprüfung der Karte abzulaufen.">
 		<!-- Stichwörter -->
-		<meta name="keywords" content="Organizer, Map, Meetings">
+		<meta name="keywords" content="AR, Map, GeoCaching">
 		<title>
-			Mapsite
+			RealLifeRouter
 		</title>
 		<link id="css" rel="stylesheet" type="text/css" href="demo.css">
 		<!-- Leaflet für die Map -->
@@ -21,28 +21,37 @@
 		<!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script> -->
 		<!-- async Seite weiterladen während Skript eingelesen wird!! -->
 	</head>
-	<body>
-		<header class="d-none d-lg-block">
-			<h1>
-				Mapsite - simple meetup organizer
-			</h1>
-		</header>
-		
+	<body>	
 		<main>
 			<div class="container">
 				<div class="row">
-					<div class="col-md-8">
-						<div id ="map"></div>
-					</div>
-					<div class="col-md-2">
+					<!-- Routing -->
+					<div class="col-2">
+						<h1>
+							RealLifeRouter
+						</h1>
 						<div class="row">
 							<p>Selected Route:</p>
 							<p id="active_route">No Route selected</p>
 						</div>
 						<div class="row">
-							<button onclick="getLocation()">Get location</button>
+							<div class="autocomplete">
+							<input id="myInput" type="text" name="route" placeholder="Route name">
+							</div>
+							<button onclick="selectRoute()">Select Route</button>
+						</div>
+						<div class="row">
+							<button id="follow" onclick="toggleFollow()">Center on Location</button>
 							<p id="p_geoloc">Geolocation not available.</p>
 						</div>
+					</div>
+					<!-- Map -->
+					<div class="col-8">
+						<div id ="map"></div>
+					</div>
+					<!-- Routing Options -->
+					<div class="col-2">
+						<p>Route Creation</p>
 						<div class="row">
 							<p id="debug">Idle</p>
 						</div>
@@ -50,27 +59,19 @@
 							<button onclick="clearAll()">Delete Everything!11!!</button><br>
 						</div>
 						<div class="row">
-								<div class="autocomplete">
-								<input id="myInput" type="text" name="route" placeholder="Route name">
-								</div>
-							<button onclick="selectRoute()">Select Route</button>
-						</div>
-						<div class="row">
 								<label for="nameRoute">New Route Name:</label>
 								<input type="text" id="nameRoute" name="nameRoute"><br><br>
 								<button onclick="addNewRoute()">Add Route</button>
-							  
+							
 						</div>
 						<div class="row">
-							<form action="#">
 								<label for="lat">Latitude:</label>
 								<input type="text" id="lat" name="lat"><br><br>
 								<label for="lon">Longitude:</label>
 								<input type="text" id="lon" name="lon"><br><br>
 								<label for="rad">Radius:</label>
 								<input type="text" id="rad" name="rad"><br><br>
-								<input type="submit" onclick="addLocToRoute()" value="Submit">
-							  </form>
+								<button onclick="addLocToRoute()">Add to Route</button>
 						</div>
 						<div class="row">
 							<button onclick="deleteCurrentRoute()">Delete Selected Route</button><br>
