--- a/index.html
+++ b/index.html
@@ -14,12 +14,15 @@
 			RealLifeRouter
 		</title>
 		
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+
 		<!-- Leaflet für die Map -->
 		<link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css">
 		<link id="css" rel="stylesheet" type="text/css" href="demo.css">
 		<!-- Bootstrap -->
 		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-		
+		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+
 	</head>
 	<body>	
 		<main>
@@ -48,16 +51,20 @@
 							<button id="follow" onclick="toggleFollow()">Center on Location</button>
 							<p id="p_geoloc"></p>
 						</div>
+						<hr/>
+						<div class="row toggle">
+							<button onclick="toggleOptions()">Options</button>
+						</div>
 						<div class="row debug">
 							<p id="debug"></p>
 						</div>
 					</div>
 					<!-- Map -->
-					<div class="col-8">
+					<div id="middle" class="col-10">
 						<div id ="map"></div>
 					</div>
 					<!-- Routing Options -->
-					<div class="col-2 options">
+					<div id="options" class="col-2 options">
 						<h1>
 							Route Creation
 						</h1>
@@ -89,10 +96,10 @@
 
 
 		<!-- Bootstrap -->
-		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 		<!-- Leaflet für die Map -->
 		<script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
 		<!-- Eigenes Javascript -->
 		<script src="demo.js"></script>
+		<!-- jQuery -->
 	</body>
 </html>
