Fixed Bugs, cleaned Code, Renamed

--- a/realLifeRouter.html
+++ b/realLifeRouter.html
@@ -18,7 +18,7 @@
 
 		<!-- Leaflet für die Map -->
 		<link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css">
-		<link id="css" rel="stylesheet" type="text/css" href="demo.css">
+		<link id="css" rel="stylesheet" type="text/css" href="realLifeRouter.css">
 		<!-- Bootstrap -->
 		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
@@ -26,10 +26,10 @@
 	</head>
 	<body>	
 		<main>
-			<div class="container all">
-				<div class="row">
+			<div class="container-fluid">
+				<div id="content" class="row">
 					<!-- Routing -->
-					<div class="col-2 route">
+					<div class="col-2 route d-none d-sm-block">
 						<h1>
 							RealLifeRouter
 						</h1>
@@ -60,7 +60,7 @@
 						</div>
 					</div>
 					<!-- Map -->
-					<div id="middle" class="col-10">
+					<div id="middle" class="col-sm-10 col-xs-12">
 						<div id ="map"></div>
 					</div>
 					<!-- Routing Options -->
@@ -99,7 +99,7 @@
 		<!-- Leaflet für die Map -->
 		<script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
 		<!-- Eigenes Javascript -->
-		<script src="demo.js"></script>
+		<script src="realLifeRouter.js"></script>
 		<!-- jQuery -->
 	</body>
 </html>
